@@ -2,8 +2,8 @@ Package: OrdMonReg
 Type: Package
 Title: Compute least squares estimates of one bounded or two ordered
         isotonic regression curves
-Version: 1.0.1
-Date: 2009-07-20
+Version: 1.0.2
+Date: 2009-10-15
 Author: Fadoua Balabdaoui, Kaspar Rufibach, Filippo Santambrogio
 Maintainer: Kaspar Rufibach <kaspar.rufibach@ifspm.uzh.ch>
 Description: We consider the problem of estimating two isotonic
@@ -14,13 +14,15 @@ Description: We consider the problem of estimating two isotonic
         obtained by minimizing the Least Squares criterion L(a, b) =
         sum_{i=1}^n (y_i - a_i)^2 w1(x_i) + sum_{i=1}^n (z_i - b_i)^2
         w2(x_i) over the class of pairs of vectors (a, b) such that a
-        and b are isotonic and a_i <= b_i for all i = 1, ..., n. The
-        estimates are computed with a projected subgradient algorithm
-        where the projection is calculated using a PAVA.
+        and b are isotonic and a_i <= b_i for all i = 1, ..., n. We
+        offer two different approaches to compute the estimates: a
+        projected subgradient algorithm where the projection is
+        calculated using a PAVA as well as Dykstra's cyclical
+        projection algorithm.
 License: GPL (>= 2)
 URL: http://www.ceremade.dauphine.fr/~fadoua,
         http://www.biostat.uzh.ch/aboutus/people/rufibach.html,
         http://www.ceremade.dauphine.fr/~filippo
-Packaged: 2009-07-21 13:23:42 UTC; rufibach
+Packaged: 2009-10-15 10:13:51 UTC; rufibach
 Repository: CRAN
-Date/Publication: 2009-07-21 15:47:38
+Date/Publication: 2009-10-18 10:04:11
