@@ -1,4 +1,4 @@
-`BoundedAntiMean` <-
+BoundedAntiMean <-
 function (y, w, a = NA, b = NA) 
 {
     res <- -BoundedIsoMean(-y, w, a = -b, b = -a)
