@@ -1,0 +1,6 @@
+disp <-
+function (r, digits) 
+{
+    res <- format(round(r, digits), nsmall = digits, scientific = FALSE)
+    return(res)
+}
