@@ -1,0 +1,7 @@
+\name{disp}
+\Rdversion{1.1}
+\alias{disp}
+\title{Function to display numbers in outputs}
+\description{Function that facilitates output of numbers}
+\keyword{nonparametric}
+
