@@ -1,3 +1,9 @@
+OrdMonReg_1.0.2 ()
+---------------------------------
+- corrected function 'boundedAntiMeanTwo.R'
+- added function 'boundedIsoMeanTwoDykstra.R' (and 'disp')
+
+
 OrdMonReg_1.0.1 (2009/07/20)
 ---------------------------------
 - Changed description files to emphasis on isotonic (according to
